src/objects/SystemSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>AZ_OPT_Enabler__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AZ_OPT_Enabler</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ActnPln_CtlgEnabledFor_CAFSS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ActnPln CtlgEnabledFor CAFSS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ActnPln_CtlgEnabledFor_CM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ActnPln CtlgEnabledFor CM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ActnPln_CtlgEnabledFor_Cambridge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ActnPln CtlgEnabledFor Cambridge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ActnPln_CtlgEnabledFor_NR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ActnPln CtlgEnabledFor NR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ActnPln_CtlgEnabledFor_Redwood__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ActnPln CtlgEnabledFor Redwood</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Contact_RESTEndpoint__c</fullName>
        <description>Target for contact posting from PMC web lead forms.  The value must also be set in the Remote Site Settings</description>
        <label>CRM Contact RESTEndpoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ImIncidentMgmtFeatureEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is to control if the incident feature is enabled.</description>
        <label>ImIncidentMgmtFeatureEnabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NPA_V2_Date__c</fullName>
        <label>NPA V2 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PB_AdmissionDocumentFeature__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is the custom setting to enable &quot;Admission Document&quot; feature on the admission view page.</description>
        <label>PB_AdmissionDocumentFeature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referral_ConvertCMEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Referral ConvertCMEnabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referral_Neuro_Features_Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>https://projects.thementornetwork.com/browse/NEVAL-32</description>
        <label>Referral Neuro Features Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>iServeProdInstance__c</fullName>
        <label>iServeProdInstance</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>SystemSettings</label>
</CustomObject>